Basic Html layout

--- a/index.html
+++ b/index.html
@@ -16,6 +16,18 @@
 
 </head>
 <body>
+    <div id="buttons-here">
+    </div>   
+    <form class="nav justify-content-end">
+        <div class="form-group col-md-3">
+            <label for="exampleFormControlInput1">Add your own!</label>
+            <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="">
+            </div>
+            <br>
+            <button type="submit" class="btn btn-primary mb-2">Submit</button>
+    </form>
+    <div id="gifs-here">
+    </div> 
 
 
     <!-- jQuery -->
