added the functionallity but it is currently broken when you search for a new topic

--- a/index.html
+++ b/index.html
@@ -18,13 +18,12 @@
 <body>
     <div id="buttons-here">
     </div>   
-    <form class="nav justify-content-end">
-        <div class="form-group col-md-3">
+    <form class="d-flex justify-content-end">
+        <div class="form-group col-md-3 ">
             <label for="exampleFormControlInput1">Add your own!</label>
-            <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="">
+            <input type="text" id="input-here" placeholder="">
             </div>
-            <br>
-            <button type="submit" class="btn btn-primary mb-2">Submit</button>
+            <button type="submit" id="submit-button" class="btn btn-primary mb-2 mr-2 mt-auto p-2 bd-highlight">Submit</button>
     </form>
     <div id="gifs-here">
     </div> 
