Fixed search button and added some CSS

--- a/index.html
+++ b/index.html
@@ -13,17 +13,19 @@
 <!-- My style sheets -->
 <link rel="stylesheet" href="./assets/css/style.css">
 <link rel="reset" href="./assets/css/reset.css">
+<link href="https://fonts.googleapis.com/css?family=Permanent+Marker&display=swap" rel="stylesheet">
 
 </head>
 <body>
+    <h1>Parks and Rec Gifs!</h1>
     <div id="buttons-here">
     </div>   
     <form class="d-flex justify-content-end">
-        <div class="form-group col-md-3 ">
-            <label for="exampleFormControlInput1">Add your own!</label>
+        <div class="form-group ">
+            <label>Add Your Own</label><br>
             <input type="text" id="input-here" placeholder="">
             </div>
-            <button type="submit" id="submit-button" class="btn btn-primary mb-2 mr-2 mt-auto p-2 bd-highlight">Submit</button>
+            <button type="submit" id="submit-button" class="btn btn-secondary px-4 mx-2 mt-auto bd-highlight">Submit</button>
     </form>
     <div id="gifs-here">
     </div> 
