fixed so there are col & row

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
             </div>
             <button type="submit" id="submit-button" class="btn btn-secondary px-4 mx-2 mt-auto bd-highlight">Submit</button>
     </form>
-    <div id="gifs-here">
-    </div> 
+    <div id="gifs-here" class="row">
+     </div> 
 
 
     <!-- jQuery -->
